--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+:root{
+  --sicky-top-left:5.4rem;
+  --sicky-top-left:-18rem;
+  --card-border-radius:1rem;
+  --card-padding:1rem;
+  --btn-padding:0.6rem 2rem;
+  --border-radius:2rem;
+  --search-padding:0.6rem 1rem;
+}
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -5,6 +15,9 @@
   font-family: 'Roboto', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 /***************** Global ************************/
 
 .cursor{
@@ -47,16 +60,16 @@ html{
   scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width:5px;
   height:5px;
 }
 
-html::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: white;
 }
 
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: #ff2d75;
   border-radius:2rem;
 }
@@ -531,10 +544,15 @@ footer .all_link :hover{
 
 /**** profil user */
 .navbar_user{
-  animation: change_background 2s infinite;
+  background-color: whitesmoke ;
+  /*animation: change_background 2s infinite;*/
+}
+#navbar{
+   background-color: #000;
+   box-shadow: 0 0 0 10px #4fc3dc44,0 0 10px #4fc3dc,0 0 15px #4fc3dc !important;
 }
 
-@keyframes change_background {
+/*@keyframes change_background {
   0%{
     background-image: linear-gradient(to right, #ff2d75 ,#2696E8);
   }
@@ -544,7 +562,7 @@ footer .all_link :hover{
   100%{
     background-image: linear-gradient(to right, #ff2d75 ,#2696E8);
   }
-}
+}*/
 
 .dropdown-toggle {
   outline: 0;
@@ -611,3 +629,223 @@ footer .all_link :hover{
 .lh-tight {
   line-height: 1.25;
 }
+
+a{
+text-decoration: none !important;
+}
+
+
+main{
+  position: relative;
+  top: 100px !important;
+}
+
+main .container-fluid{
+  display: grid;
+  grid-template-columns:18vw auto 20vw ;
+  column-gap: 2rem;
+  position: relative;
+}
+
+main{
+  overflow: scroll;
+}
+
+.middle{
+  overflow-y: scroll;
+  max-height: 100vh;
+}
+
+main .container-fluid .left  {
+  height: max-content;
+  position: sticky;
+  padding: var(--sicky-top-left);
+}
+
+main .container-fluid .left .profile{
+  padding: var(--card-padding);
+  background-color: #fff;
+  border-radius: var(--card-border-radius);
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  width: 100%;
+}
+
+.left .sidebar{
+  margin-top: 1rem;
+  background: #fff;
+  border-radius: var(--card-border-radius);
+}
+
+.left .sidebar .menu-item{
+  display: flex;
+  align-items: center;
+  height: 4rem;
+  cursor: pointer;
+  translate: all 300ms ease;
+  position: relative;
+}
+
+.left .sidebar .menu-item:hover{
+  background-color: white;
+}
+
+.left .sidebar i{
+  font-size: 1.4rem;
+  color: gray;
+  margin-left: 2rem;
+  position: relative;
+}
+
+
+.left .sidebar h3{
+  margin: 1.5rem;
+  font-size: 1rem;
+}
+
+.left .sidebar .active{
+  background: whitesmoke;
+}
+
+.left .sidebar .active i,.left .sidebar .active h3{
+  color: blue;
+}
+
+.left .sidebar .active::before{
+  content: '';
+  display: block;
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  background: blue;
+}
+
+.left .sidebar .menu-item.active{
+  border-top-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+
+.left .btn{
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+
+@media screen and (max-width:1200px) {
+  .container-fluid{
+      width: 100%;
+  }
+
+  main .container-fluid{
+      grid-template-columns: 5rem auto 30vw;
+      gap: 1rem;
+  }
+
+  .left{
+      width: 5rem;
+  }
+
+  main .container-fluid .left .profile{
+      display: none;
+  }
+
+  .sidebar h3{
+      display: none;
+  }
+
+  .left .btn{
+      display: none;
+  }
+}
+
+
+.middle .feeds .feed{
+  background: white;
+  border-radius: var(--card-border-radius);
+  padding: var(--btn-padding);
+  margin: 1rem 0;
+  font-size: 0.85rem;
+  line-height: 1.5;
+}
+
+.middle .feed .head{
+  display: flex;
+  justify-content: space-between;
+}
+
+.middle .feed .user{
+  display: flex;
+  gap: 1rem;
+}
+
+.middle .feed .photo{
+  border-radius: var(--card-border-radius);
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+
+
+
+.middle .feed .action-buttons{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+  margin: 0.6rem;
+}
+
+.middle .liked-by {
+  display: flex;
+
+}
+.middle .liked-by span{
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid white;
+  margin-left: -0.6rem;
+}
+
+.middle .liked-by span:first-child{
+  margin: 0;
+}
+
+.middle .liked-by p{
+  margin-left: 0.5rem;
+}
+main{
+  overflow-y: hidden;
+}
+@media (max-width:992px) {
+ 
+  main .container-fluid{
+      grid-template-columns: 0 auto 5rem;
+  }
+
+  main .container-fluid .left{
+      grid-column: 3/4;
+      position: fixed;
+      bottom: 0;
+      right: 0;
+  }
+  main .container-fluid .middle{
+      grid-column: 1/3;
+      overflow-y: hidden;
+  }
+  main .container-fluid .right{
+      display: none;
+  }
+}
+
+
+
+
+
+
+
+
