--- a/layout.phtml
+++ b/layout.phtml
@@ -10,8 +10,8 @@
       <link rel="stylesheet" href="../../assets/css/style.css">
       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
       <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
-      <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+      <!-- <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"> -->
       <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -21,8 +21,6 @@
       <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="../assets/css/style.css">
       <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-      <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
       <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -31,13 +29,15 @@
       <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/style.css">
       <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
-      <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+      <script src="./assets/vendor/aos/aos.js"></script>
+      <script src="./assets/js/script.js"></script>
       <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
       <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
       <?php endif; ?>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <title><?=$page_titel?></title>
 </head>
 <body >
@@ -577,7 +577,8 @@
                           <strong class="me-auto">Notification</strong>
                           <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                         </div>
-                        <div class="toast-body">
+                      <div   id="body_notification">
+                        <div class="toast-body" >
                         <?php foreach($all_notif as $message):  ?>
                             <div class="card mb-2">
                            <div class="card-header">
@@ -588,6 +589,7 @@
                     </div>
               </div>
         <?php endforeach; ?>
+                        </div>
                         </div>
                       </div>
               </div>
@@ -707,16 +709,13 @@ function toasty(param){
 }
 
 </script>
-<script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="./assets/vendor/aos/aos.js"></script>
-<script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="./assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="./assets/vendor/php-email-form/validate.js"></script>
 <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
-<script src="./assets/js/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script lang="js">
+const popover = new bootstrap.Popover('.popover-dismiss', {
+  trigger: 'focus'
+})
+  </script>
 
 </html>
