--- a/ProfilUser/ProfilUser.phtml
+++ b/ProfilUser/ProfilUser.phtml
@@ -61,6 +61,14 @@
                                   <img src="..<?=$_SESSION['avatarUser']?>" width="70px" height="70px" alt="">     </span>
                                <span>      <img src="..<?=$_SESSION['avatarUser']?>" width="70px" height="70px" alt="">     </span>
                                <span>     <img src="..<?=$_SESSION['avatarUser']?>" width="70px" height="70px" alt="">     </span>
+                               <button type="button" class="btn btn-secondary"
+        data-bs-toggle="popover" data-bs-placement="right"
+        data-bs-custom-class="custom-popover"
+        data-bs-title="Custom popover"
+        data-bs-content="This popover is themed via CSS variables.">
+  Custom popover
+</button>
+
                                  <p>Like by <b>talel mejri</b>and 2.23others</p>
                                  <p><b>Lana rose</b>hello ma maaaan</p>    
                             </span>
