--- a/ProfilUser/ProfilUser.phtml
+++ b/ProfilUser/ProfilUser.phtml
@@ -1,75 +1,5 @@
 <style>
 
-  .all_story{
-      overflow-x: auto;
-      overscroll-behavior: contain;
-      border: 1px solid #fff;
-      background-color: #fff;
-      border-radius: 10px;
-      padding: 2rem;
-      width: 100%;
-  }
- .story-container{
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: 5rem;
-  grid-gap: 2rem;
-}
-
-.story-container .content,.story-container .content-myself{
-  display: grid;
-  grid-gap: 0.5rem;
-  margin: 0;
-  text-align: center;
-  position: relative;
-  cursor: pointer;
-  user-select: none;
-  transition: all 0.2s ease-in;
-}
-
-.story-container .content:hover{
-  transform: scale(1.1);
-}
-
-.story-container .content .img-container{
-  display: inline-block;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50px;
-  background:
-  radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,blue,red);
-}
-
-.story-container .content-add .img-container{
-  display: inline-block;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50px;
-  cursor: pointer;
-  background:gray;
-}
-
-.story-container .content-myself .img-container{
-  display: inline-block;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50px;
-  background:
-  radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,black,white);
-}
-.story-container .content .img-container img,.story-container .content-add .img-container img,.story-container .content-myself .img-container img{
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  clip-path: circle(42%);
-}
-
-.slide{
-  border-radius: 30px;
-}
-
-
 </style>
         <div class="all_story">
           <div class="story-container">
@@ -122,7 +52,7 @@
                                     <div class="modal-body mx-5" >
                                       
                                       <?php  foreach($str as $value ){ ?>
-                                              <img class="slide mx-5"  data-bs-toggle="modal" data-bs-target="#exampleModal<?=$value['id']?>" src="<?=$value['file']?>" width="70%" height="70%" alt="">    
+                                              <img class="slide"  data-bs-toggle="modal" data-bs-target="#exampleModal<?=$value['id']?>" src="<?=$value['file']?>" width="70%" height="70%" alt="">    
                                       <?php  } ?>
                                   
                                     </div>
@@ -189,7 +119,6 @@
                         </div>
                     </div>
                 </div>
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 
 let slideIndex = 0;
